--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.5.0",
     "formik": "^2.4.4",
+    "gh-pages": "^6.0.0",
     "lint": "^0.8.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
