--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "./",
+  "homepage": "https://YarynaBas1234.github.io/incode",
   "name": "app-incode",
   "version": "0.1.0",
   "private": true,
@@ -15,7 +15,6 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.5.0",
     "formik": "^2.4.4",
-    "gh-pages": "^6.0.0",
     "lint": "^0.8.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -63,6 +62,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "gh-pages": "^6.0.0",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.3"
   }
