change the test rules

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "build": "node --max_old_space_size=2560 node_modules/.bin/react-scripts build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "test": "react-scripts test",
+    "test": "node --inspect node_modules/.bin/cross-env API_HOST=url ember serve",
     "eject": "react-scripts eject",
     "lint": "eslint src --fix --color",
     "lint:prepush": "npx lint-staged"
